# src/routes/saloon.routes.ts
@@ -11,6 +11,7 @@ router.get('/owner/:userId', saloonController.getSaloonByOwnerId);
 router.get('/:id', saloonController.getSaloonById);
 router.get('/:id/services', saloonController.getSaloonServices);
 router.get('/:id/availability', saloonController.getSaloonAvailability);
+router.get('/nearby', saloonController.getNearbySaloons);
 router.post('/:id/services', authenticate, authorizeOwner, saloonController.addServiceToSaloon);
 router.put('/:id', authenticate, authorizeOwner, saloonController.updateSaloon);
 router.delete('/:id', authenticate, authorizeOwner, saloonController.deleteSaloon);
